Développement des méthodes signin et signup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,15 +15,9 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDiale
 
 
 
-#taille de fichier max pour chaque requête.
-#taille maximale de la requête pour un multipart/form-data.
-spring.servlet.multipart.max-file-size=500MB
-spring.servlet.multipart.max-request-size=500MB
-
-
 ###### Email Properties ######
-spring.mail.username=bttravel2022@gmail.com
-spring.mail.password=54487021
+spring.mail.username=laouinikhoubaib@gmail.com
+spring.mail.password=bxpztlpavxqnsqml
 spring.mail.port=587
 spring.mail.host=smtp.gmail.com
 spring.mail.properties.mail.transport.protocol=smtp
@@ -31,12 +25,5 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 
-google.id=318621665915-pntirer35gnv37hq1bmnhgkpm6tav32p.apps.googleusercontent.com
-mySecret.password=kasdjhfkadhsY776ggTyUU65khaskdjfhYuHAwjñlji
-spring.security.user.name=khoubaib
-spring.security.user.password=khoubaib
-khoubaib.app.jwtSecret= khoubaibSecretKey
-khoubaib.app.jwtExpirationMs= 123456789
-khoubaib.app.jwtRefreshExpirationMs= 987654321
-khoubaib.app.jwtCookieName= khoubaib
+
 
