--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,15 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
+######Social config#######################
+google.id=318621665915-pntirer35gnv37hq1bmnhgkpm6tav32p.apps.googleusercontent.com
+mySecret.password=kasdjhfkadhsY776ggTyUU65khaskdjfhYuHAwjñlji
+##########################################
+
+######Files config#######################
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
+max_allowed_packet=32MS
+#########################################
+
 
